# osgearth0x

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  ddd.c  download_submodules.sh  git_clone_modules.sh  git_clone_submodules.sh  mk3rd.sh  mk4android.sh  mk4ubuntu.sh  readme.md  tmp01.md
3rd/: CMakeLists.txt
3rd/sqlite3cmake/: CMakeLists.txt  README.md  sqlite3Config.cmake.in
3rd/sqlite3cmake/CMakeModules/: AddSqliteCompilationFlags.cmake  CMakeUtils.cmake  GetSqlite3LibraryVersion.cmake  Sqlite3Build.cmake  Sqlite3Dependencies.cmake  Sqlite3Options.cmake  Sqlite3Package.cmake  Sqlite3Version.cmake
3rd/sqlite3cmake/docs/: compile-link.md
3rd/sqlite3cmake/src/: .gitignore  CMakeLists.txt
3rd/sqlite3cmake/test/: .gitignore  CMakeLists.txt  mk4ubt.sh
cmake/: FindZLIB.cmake  SQLite3Config.cmake  gdal-cmake-modules-packages-FindGEOS.cmake  gdal-cmake-template--GDALConfig.cmake.in
docs/: 00install-build-tools.md  66how2build-ndk-code-in-docker.md  FindOpenSceneGraph.cmake  android-code.md  android-opengl.md  android_cmake.md  android_osg_3rd.md  android_osgearth.md  boost_build.md  boost_ubuntu_build.md  cmake_android.md  computer-graph.md  data_osg.md  data_osgearth_readymap.md  dj_build3rd.sh  gesture-android.md  gesture-qt.md  git-cmd.md  git-diff-gdal.txt  git-diff-proj.txt  how2build-ndk-code-on-win-docker.md  java-.md  k380-kb.md  osg-code-explain.md  osg-osgearth-REGISTER-list.md  osg-static-link.md  osg_3rd-android.md  osg_3rd-ubuntu_build.md  osg_3rd_build.md  osg_android.md  osg_data.md  osg_viewer.md  osgearth-EarthManipulator.md  osgearth-about-demos.md  osgearth-android.md  osgearth-debug.md  osgearth_build.md  qt-osgearth.md  test.sh  test01.sh  (+8 more)
docs/git-diff/: git-diff-curl.txt  git-diff-libzip.txt  git-diff-osg.txt  git-diff-osgearth.txt  git-diff-protobuf.txt
docs/osgearth-code/: osg-code.md  osgearth_rex.md  osgearth_z-fighting.md
docs0/: Build-osgEarth-from-Scratch.md  build-osgearth-ubuntu.md  deepwiki.md  geotiff.md  osg.md  osg_bd-notes-curl.md  osg_bd-notes.md  osg_bd2gles.md  osg_data.md  osgearth-camera.md  osgearth-framework.md
platform/AndroOearthDemo01/: readme.md  settings.gradle.kts
platform/AndroOearthDemo01/app/: build.gradle.kts
platform/AndroOearthDemo01/app/src/androidTest/java/com/example/androoearthdemo01/: ExampleInstrumentedTest.java
platform/AndroOearthDemo01/app/src/main/: AndroidManifest.xml
platform/AndroOearthDemo01/app/src/main/cpp/: CMakeLists.txt
platform/AndroOearthDemo01/app/src/main/java/com/example/androoearthdemo01/: MainActivity.java
platform/AndroOearthDemo01/app/src/main/res/values/: strings.xml  themes.xml
platform/AndroOearthDemo01/app/src/main/res/values-night/: themes.xml
platform/AndroOearthDemo01/app/src/test/java/com/example/androoearthdemo01/: ExampleUnitTest.java
platform/AndroOearthDemo01/gradle/: libs.versions.toml
platform/AndroOearthDemo01/gradle/wrapper/: gradle-wrapper.properties
platform/AndroiOearth01/: settings.gradle.kts
platform/AndroiOearth01/app/: build.gradle.kts
platform/AndroiOearth01/app/src/androidTest/java/com/oearth/androioearth01/: ExampleInstrumentedTest.java
platform/AndroiOearth01/app/src/main/: AndroidManifest.xml
platform/AndroiOearth01/app/src/main/java/com/oearth/androioearth01/: EGLview.java  osgEarthViewer.java  osgNativeLib.java
platform/AndroiOearth01/app/src/main/jni/: CMakeLists.txt  MainActivity.txt  OeLayerFactory.cpp  OeLayerFactory.h  OsgDebugMsgHandler.cpp  OsgDebugMsgHandler.h  OsgDemoScene.cpp  OsgDemoScene.h  OsgMainApp.cpp  OsgMainApp.hpp  a-native-lib.cpp  osgNativeLib.cpp  osgPlugins.h
platform/AndroiOearth01/app/src/main/res/values/: strings.xml  themes.xml
platform/AndroiOearth01/app/src/main/res/values-night/: themes.xml
platform/AndroiOearth01/app/src/test/java/com/oearth/androioearth01/: ExampleUnitTest.java
platform/AndroiOearth01/gradle/wrapper/: gradle-wrapper.properties
platform/AndroiOearthDemo/: readme.md  settings.gradle.kts
platform/AndroiOearthDemo/app/: build.gradle.kts
platform/AndroiOearthDemo/app/src/androidTest/java/com/example/androioearthdemo/: ExampleInstrumentedTest.java
platform/AndroiOearthDemo/app/src/main/: AndroidManifest.xml
platform/AndroiOearthDemo/app/src/main/java/com/example/androioearthdemo/: EGLview.java  osgNativeLib.java  osgViewer.java
platform/AndroiOearthDemo/app/src/main/jni/: CMakeLists.txt  OsgMainApp.cpp  OsgMainApp.hpp  native-lib.cpp  osgNativeLib.cpp  osgPlugins.h
platform/AndroiOearthDemo/app/src/main/res/layout/: activity_main.xml  ui_layout_gles.xml
platform/AndroiOearthDemo/app/src/main/res/menu/: appmenu.xml
platform/AndroiOearthDemo/app/src/main/res/values/: strings.xml  themes.xml
platform/AndroiOearthDemo/app/src/main/res/values-night/: themes.xml
platform/AndroiOearthDemo/app/src/test/java/com/example/androioearthdemo/: ExampleUnitTest.java
platform/AndroiOearthDemo/gradle/wrapper/: gradle-wrapper.properties
platform/lnx8sky/: .gitignore  CMakeLists.txt  demo_simple_sky.cpp  mk4ubt.sh  osgPlugins.h
scripts/: addr2line_parse_crash.sh  build_libwebp.sh  check_so_symbol.sh  linux-shell.md  osg-cmk-configure.sh  osgearth-cmk-configure.sh
scripts/test/: path_softlink.sh  test01.sh  test02.sh  test04.sh
src/: CMakeLists.txt
